# compute

./: .gitignore  Cargo.toml  DEVELOPMENT.md  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
benches/: benchmark.rs  benchmark_distributions.rs  benchmark_functions.rs  benchmark_linalg.rs  benchmark_statistics.rs  benchmark_summary.rs  benchmark_timeseries.rs
examples/gp_regression/: Cargo.toml
examples/gp_regression/src/: main.rs
src/: lib.rs  main.rs  prelude.rs  utils.rs
src/data/: mod.rs
src/distributions/: bernoulli.rs  beta.rs  binomial.rs  chi_squared.rs  discreteuniform.rs  exponential.rs  gamma.rs  gumbel.rs  mod.rs  multivariatenormal.rs  normal.rs  pareto.rs  poisson.rs  t.rs  uniform.rs
src/functions/: combinatorial.rs  gamma.rs  interpolate.rs  mod.rs  statistical.rs
src/integrate/: functions.rs  methods.rs  mod.rs  samples.rs
src/linalg/: decomposition.rs  mod.rs  rotations.rs  utils.rs  vops.rs
src/linalg/array/: broadcast.rs  dot.rs  matrix.rs  mod.rs  vec.rs  vops.rs
src/linalg/decomposition/: cholesky.rs  lu.rs  mod.rs  substitution.rs
src/linalg/vec/: dot.rs  matrix.rs  mod.rs  vec.rs  vops.rs
src/optimize/: adam.rs  gradient.rs  lbfgs.rs  lm.rs  loss.rs  mod.rs  num_gradient.rs  sgd.rs  sim_annealing.rs
src/optimize/optimizers/: adam.rs  irls.rs  lm.rs  mod.rs  sgd.rs
src/predict/: logistic.rs  mod.rs  polynomial.rs
src/predict/glm/: families.rs  glm.rs  mod.rs
src/predict/glms/: families.rs  formula.rs  glm.rs  mod.rs
src/predict/gps/: kernels.rs  mod.rs
src/signal/: convolution.rs  filters.rs  functions.rs  mod.rs
src/statistics/: covariance.rs  hist.rs  mod.rs  moments.rs  order.rs  tests.rs
src/summary/: covariance.rs  mod.rs  moments.rs  order.rs
src/timeseries/: autoregressive.rs  functions.rs  mod.rs
src/utils/: linalg.rs  mod.rs
src/validation/: mod.rs  resample.rs
