[package]
name = "compute"
version = "0.1.26"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A crate for statistical computing."
repository = "https://github.com/al-jshen/compute"

categories = ["science"]
keywords = ["statistics", "compute", "data"]

[dependencies]
fastrand = "1"
approx_eq = "0.1"
autodiff = "0.3"
blas = {version = "0.22", optional = true}
lapack = {version = "0.19", optional = true}

[features]
# default = ["blas", "lapack"]

[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = "0.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
openblas-src = "0.10"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark_statistics"
harness = false

[[bench]]
name = "benchmark_linalg"
harness = false

[[bench]]
name = "benchmark_distributions"
harness = false

[[bench]]
name = "benchmark_functions"
harness = false

[[bench]]
name = "benchmark_timeseries"
harness = false
