[package]
name = "compute"
version = "0.1.32"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A crate for statistical computing."
repository = "https://github.com/al-jshen/compute"

categories = ["science"]
keywords = ["statistics", "compute", "data"]

[dependencies]
fastrand = "1"
approx_eq = "0.1"
autodiff = "0.3"
impl_ops = "0.1"

[features]
blas = ["blas_crate", "accelerate-src", "openblas-src"]
lapack = ["lapack_crate", "accelerate-src", "openblas-src"]

[dependencies.blas_crate]
package = "blas"
version = "0.22"
optional = true
default-features = false

[dependencies.lapack_crate]
package = "lapack"
version = "0.19"
optional = true
default-features = false

[target.'cfg(all(target_os = "macos"))'.dependencies]
accelerate-src = {version = "0.3", optional = true}

[target.'cfg(not(target_os = "macos"))'.dependencies]
openblas-src = {version = "0.10", optional = true}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark_statistics"
harness = false

[[bench]]
name = "benchmark_linalg"
harness = false

[[bench]]
name = "benchmark_distributions"
harness = false

[[bench]]
name = "benchmark_functions"
harness = false

[[bench]]
name = "benchmark_timeseries"
harness = false
