[package]
name = "compute"
version = "0.1.34"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A crate for statistical computing."
repository = "https://github.com/al-jshen/compute"

categories = ["science"]
keywords = ["statistics", "compute", "data"]

[dependencies]
alea = "0.2"
approx_eq = "0.1"
reverse = { version = "0.1", features = ["diff"] }
impl_ops = "0.1"

[features]
blas = ["blas_crate", "accelerate-src", "openblas-src"]
lapack = ["lapack_crate", "accelerate-src", "openblas-src"]

[dependencies.blas_crate]
package = "blas"
version = "0.22"
optional = true
default-features = false

[dependencies.lapack_crate]
package = "lapack"
version = "0.19"
optional = true
default-features = false

[target.'cfg(all(target_os = "macos"))'.dependencies]
accelerate-src = {version = "0.3", optional = true}

[target.'cfg(not(target_os = "macos"))'.dependencies]
openblas-src = {version = "0.10", optional = true}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark_statistics"
harness = false

[[bench]]
name = "benchmark_linalg"
harness = false

[[bench]]
name = "benchmark_distributions"
harness = false

[[bench]]
name = "benchmark_functions"
harness = false

[[bench]]
name = "benchmark_timeseries"
harness = false
